test/types/file/bradc/badfile3.good
badfile3.chpl:1: In function '__init_badfile3':
badfile3.chpl:3: error: 'thisVariableDoesntExist' undeclared (first use this function)
